[package]
name = "heartbeat"
version = "0.1.0"
authors = ["christopher-henderson <chris@chenderson.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "heartbeat"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "json"]}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
k8s-openapi = { version = "0.13.0", features = ["v1_21"] }
tokio = { version = "1.13.0", features = ["full"] }
futures = "0.3.17"
futures-util = "0.3.17"
chrono = "0.4.19"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]